feat: close environment after training

--- a/train_tennis.ipynb
+++ b/train_tennis.ipynb
@@ -165,7 +165,7 @@
     "        if current_score > solved_score:\n",
     "            print (\"\\nEnvironment solved in {:d} episodes!\\tAverage Score: {:3f}\".format(i_episode-100, current_score))\n",
     "            break\n",
-    "            \n",
+    "    env.close()       \n",
     "    return scores, scores_mean, agent\n",
     "    \n",
     "scores, scores_mean, agent = train()  \n",
